; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_free_buf.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_free_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar934x_nfc = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ar934x_nfc*)* @ar934x_nfc_free_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar934x_nfc_free_buf(%struct.ar934x_nfc* %0) #0 {
  %2 = alloca %struct.ar934x_nfc*, align 8
  store %struct.ar934x_nfc* %0, %struct.ar934x_nfc** %2, align 8
  %3 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %4 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %7 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %10 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %13 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @dma_free_coherent(i32 %5, i32 %8, i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @dma_free_coherent(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
